@@ -37,29 +37,7 @@ public class TestingCluster implements Closeable
 {
     static
     {
-        /*
-            This ugliness is necessary. There is no way to tell ZK to not register JMX beans. Something
-            in the shutdown of a QuorumPeer causes the state of the MBeanRegistry to get confused and
-            generates an assert Exception.
-         */
-        ClassPool pool = ClassPool.getDefault();
-        try
-        {
-            CtClass cc = pool.get("org.apache.zookeeper.server.quorum.LearnerZooKeeperServer");
-            pool.appendClassPath(new javassist.LoaderClassPath(TestingCluster.class.getClassLoader()));     // re: https://github.com/Netflix/curator/issues/11
-            for ( CtMethod method : cc.getMethods() )
-            {
-                if ( method.getName().equals("registerJMX") || method.getName().equals("unregisterJMX") )
-                {
-                    method.setBody(null);
-                }
-            }
-            cc.toClass();
-        }
-        catch ( Exception e )
-        {
-            e.printStackTrace();
-        }
+        ByteCodeRewrite.apply();
     }
 
     private final QuorumConfigBuilder           builder;
