@@ -27,6 +27,11 @@ import java.net.ServerSocket;
  */
 public class TestingServer implements Closeable
 {
+    static
+    {
+        ByteCodeRewrite.apply();
+    }
+
     private final TestingZooKeeperServer testingZooKeeperServer;
     private final InstanceSpec spec;
 
