@@ -10,6 +10,16 @@ loses connection
 * Added a non-reentrant mutex: InterProcessSemaphoreMutex. This mutex doesn't have the threading
 restrictions that InterProcessMutex has. This should help with issues 75 and 117.
 
+* Merge 122 from ithaka that addresses Issue #98 - JsonInstanceSerializer does not deserialize
+custom payload types. IMPORTANT! This change introduces a breaking incompatibility with List payloads
+that will show up in environments that mix the old code and the new code. The new code will throw a
+JsonMappingException when it attempts to read a List payload written by the old code. The old code,
+when it reads a List payload generated by the new code, will generate a list with two elements,
+the first of which is the class name of the List type, and the second of which is the original list.
+
+* Issue 121: Apply bytecode rewriting to turn off JMX registrations to TestingServer as well as
+TestingCluster.
+
 1.1.15/1.0.16 - July 14, 2012
 =============================
 * Added ChildReaper. This builds on the newly added Reaper. This utility monitors a single node
